WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265736
[UIAsyncTextInput] Release assertion when dismissing the keyboard or changing focused element
https://bugs.webkit.org/show_bug.cgi?id=265736
Summary
[UIAsyncTextInput] Release assertion when dismissing the keyboard or changing...
Wenson Hsieh
Reported
2023-12-02 17:35:15 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-02 17:41:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21222
EWS
Comment 2
2023-12-03 12:24:25 PST
Committed
271442@main
(77cb34332913): <
https://commits.webkit.org/271442@main
> Reviewed commits have been landed. Closing PR #21222 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-03 12:25:15 PST
<
rdar://problem/119101717
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug